--- a/react-web/src/styles/Car.css
+++ b/react-web/src/styles/Car.css
@@ -49,6 +49,16 @@
     right: 10px;
     bottom: 10px;
 }
+.confirm-booking {
+    border-radius: 25px;
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    cursor: pointer;
+    position: absolute;
+    left: 10px;
+}
 
 .car-data {
     margin-top: 60px;
