--- a/react-web/src/styles/Car.css
+++ b/react-web/src/styles/Car.css
@@ -1,10 +1,11 @@
 .Car {
     border-radius: 25px;
-    border: 2px solid;
-    width: 80%;
+    border: 2px solid rgb(22, 22, 105);
+    width: calc(100% - 40px); /* 40px = border-radius + margin */
     height: auto;
     padding: 4px;
-    position: relative
+    position: relative;
+    margin: 15px;
 }
 
 .Car-header {
