--- a/react-web/src/styles/Car.css
+++ b/react-web/src/styles/Car.css
@@ -1,6 +1,6 @@
 .Car {
     border-radius: 25px;
-    border: 2px solid rgb(22, 22, 105);
+    border: 2px solid #161669;
     width: calc(100% - 40px); /* 40px = border-radius + margin */
     height: auto;
     padding: 4px;
