--- a/react-web/src/styles/App.css
+++ b/react-web/src/styles/App.css
@@ -158,6 +158,16 @@ button:hover {
   font-size: 14px;
 }
 
+.error-booking{
+  background-color: rgb(160, 4, 4);
+  color: white;
+  margin: 5px 5px 20px 5px;
+  padding: 10px;
+  font-size: 12px;
+  text-align: center;
+  border-radius: 5px;
+}
+
 
 .start-search-container {
   display: flex;
